# embedding-playground

./: .envrc  .gitignore  README.md  docker-compose.yml
client/: .eslintrc.json  .gitignore  Dockerfile  next.config.js  openapi-codegen.config.ts  package.json  server_openapi.json  tsconfig.json
client/app/: ModelSelector.tsx  config.tsx  layout.tsx  layout_inner.tsx  math.ts  page.tsx
client/components/: Embeddings.tsx  MathEmbeddingInput.tsx  ModelSelector.tsx  Pca.tsx  SimilarityMatrix.tsx  TextEmbeddingInput.tsx  noSsr.tsx  useChartDimensions.ts  useEmbeddings.ts
client/components/ui/: dialog.tsx  hover-card.tsx  input.tsx  textarea.tsx  toast.tsx
server/: .gitignore  Dockerfile  README.md  justfile  pyproject.toml
server/src/: embeddings.py  generate_openapi.py  server.py  test_codet5p200.py
