[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["John Sungjin Kim <jsjkim00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
instructorembedding = "^1.0.1"
torch = [
    { platform = 'darwin', version = "^2.0.1", source = "PyPI" },
    { platform = 'linux', version = "^2.0.1", source = "pytorch_cu118" },
]
transformers = "^4.31.0"
sentence-transformers = "^2.2.2"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.321"
ruff = "^0.0.284"
black = "^23.7.0"
ipykernel = "^6.25.1"
ipywidgets = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
ignore = ["E501"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportMissingTypeStubs = "warning"

reportUnusedImport = "warning"
reportUnusedVariable = "warning"

reportPrivateImportUsage = "none"

reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
